--- a/battle-reusables/package.json
+++ b/battle-reusables/package.json
@@ -12,16 +12,16 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/native": "^7.0.0",
+    "@react-navigation/native": "^7.1.19",
     "@rn-primitives/portal": "~1.3.0",
     "@rn-primitives/select": "^1.2.0",
     "@rn-primitives/slot": "^1.2.0",
     "@rn-primitives/tabs": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^54.0.0",
+    "expo": "^54.0.22",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.10",
+    "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
@@ -30,7 +30,8 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-hook-form": "^7.66.0",
+    "react-native": "0.81.5",
     "react-native-css-interop": "^0.2.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
