--- a/battle-reusables/package.json
+++ b/battle-reusables/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "expo": "^54.0.22",
+    "expo-constants": "~18.0.10",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.14",
     "expo-splash-screen": "~31.0.10",
@@ -51,6 +52,7 @@
     "http-proxy-middleware": "^3.0.5",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "sharp-cli": "^5.2.0",
     "typescript": "~5.9.2"
   },
   "private": true
