--- a/battle-reusables/eas.json
+++ b/battle-reusables/eas.json
@@ -5,7 +5,7 @@
       "android": { "buildType": "apk" },
       "node": "20.11.1",
       "env": {
-        "EXPO_PUBLIC_API_HOST": "battle.b022mc.cn"
+        "EXPO_PUBLIC_API_HOST": "www.b022mc.cn"
       }
     }
   }
