--- a/battle-reusables/app.json
+++ b/battle-reusables/app.json
@@ -34,7 +34,13 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      [
+        "expo-build-properties",
+        {
+          "android": { "usesCleartextTraffic": true }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
