--- a/battle-tiles/configs/config.yaml
+++ b/battle-tiles/configs/config.yaml
@@ -14,10 +14,10 @@ server:
 data:
   database:
     driver: cloudsqlpostgres
-    source: "user=B022MC password=banishmentB022 host=8.137.52.203 port=26655 dbname=battle-tiles-dev sslmode=disable"
+    source: "user=B022MC password=banishmentB022 host=8.137.52.203 port=26655 dbname=battle-tiles-dev sslmode=disable TimeZone=Asia/Shanghai"
   databaseList:
     - driver: cloudsqlpostgres
-      source: "user=B022MC password=banishmentB022 host=8.137.52.203 port=26655 sslmode=disable dbname=battle-cloud-dev"
+      source: "user=B022MC password=banishmentB022 host=8.137.52.203 port=26655 sslmode=disable dbname=battle-cloud-dev TimeZone=Asia/Shanghai"
       alias: "cloud-cloud"
   redis:
     addr: "8.137.52.203:6379"
