--- a/battle-reusables/package.json
+++ b/battle-reusables/package.json
@@ -7,7 +7,10 @@
     "android": "expo start -c --android",
     "ios": "expo start -c --ios",
     "web": "expo start -c --web",
-    "clean": "rm -rf .expo node_modules"
+    "clean": "rm -rf .expo node_modules",
+    "build:web": "expo export --platform web --output-dir web-build",
+    "preview:web": "serve web-build",
+    "build-preview:web": "expo export --platform web --output-dir web-build && serve web-build"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
