--- a/battle-tiles/configs/config.yaml
+++ b/battle-tiles/configs/config.yaml
@@ -1,7 +1,7 @@
 server:
   http:
-    addr: "[::]:8000"
-#    addr: "0.0.0.0:8000"
+#    addr: "[::]:8000"
+    addr: "0.0.0.0:8000"
     timeout: 1s
   asynq:
     addr: "118.24.135.171:6379"
