--- a/battle-reusables/package.json
+++ b/battle-reusables/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "battle-Reusables",
+  "name": "battle-reusables",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -22,12 +22,12 @@
     "@rn-primitives/tabs": "^1.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "expo": "^54.0.22",
+    "expo": "~54.0.25",
     "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.10",
-    "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.14",
-    "expo-splash-screen": "~31.0.10",
+    "expo-linking": "~8.0.9",
+    "expo-router": "~6.0.15",
+    "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-system-ui": "~6.0.7",
     "jsencrypt": "^3.5.4",
